[package]
name = "byrdocs-logs-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-credential-types = "1.2.3"
aws-sdk-s3 = { version = "1.93.0", features = ["behavior-version-latest"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
flate2 = "1.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
